@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2728 2005/03/02 03:06:34 ryuji Exp $
+$KAME: CHANGELOG,v 1.2729 2005/03/02 04:00:50 suz Exp $
 
 <200503>
+2005-03-02  SUZUKI, Shinsuke <suz@kame.net>
+	* kame/sys/netinet6/ip6_output.c: fixed a freebsd5 kernel crash when
+	  WITNESS debug option is enabled
+
 2005-03-01  ryuji <ryuji@sfc.wide.ad.jp>
 	* "mdd" is replaced by "babymdd". please see man page for details.
 
